# gwaudiosync-musescoreRR

./: AVLoaderSafe_PluginEditor.cpp  AVLoaderSafe_PluginEditor.h  AVLoaderSafe_PluginProcessor.cpp  AVLoaderSafe_PluginProcessor.h  AudioVideo_PluginEditor_v1.cpp  CMakeLists.txt  PluginEditor_FIXED.h  PluginProcessor_FIXED.cpp  README-SV.md  build_windows.bat
.github/workflows/: build-windows-vst3.yml
scripts/: bootstrap_windows.ps1
src/: AudioVideo_PluginEditor.h  AudioVideo_PluginProcessor.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
